admin service config updated

--- a/admin-service-dev.properties
+++ b/admin-service-dev.properties
@@ -1,1 +1,1 @@
-msg = Admin Service in dev - this is from config server -Development enviornment.
+msg = Admin Service in dev !! - this is from config server -Development enviornment.
